# Diplom

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
tracker/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tracker/fixtures/: fixtures.json
tracker/migrations/: 0001_initial.py
